Transferred from the Adobe Open Source Subversion Repository
Revision: 23264
Author:   cframpto@adobe.com
Date:     2012-01-05T15:32:17.552004Z

Log Message: 
-----------
When cleaning the textLayout directory don't delete **/.* (the FlashBuilder build files).

Modified Paths:
--------------
/private/flex/sdk/branches/apache/frameworks/build.xml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247580 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -166,6 +166,7 @@
         <delete failonerror="false" verbose="false">
             <fileset dir="${basedir}/projects/textLayout">
                 <include name="**/**"/>
+                <exclude name=".*/**"/>
                 <exclude name="build.xml"/>
             </fileset>
         </delete>
