Transferred from the Adobe Open Source Subversion Repository
Revision: 23267
Author:   cframpto@adobe.com
Date:     2012-01-05T21:50:56.385228Z

Log Message: 
-----------
Use osmf.swc from source zip in osmf zip rather than the one at the top-level because the one at the top level has trace statements left in it.  Fix the headers in two of the tests.

Modified Paths:
--------------
<path kind="file" action="M">/private/flex/sdk/branches/apache/frameworks/tests/basicTests/spark/scripts/SortTestScript.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/apache/frameworks/tests/basicTests/spark/views/SortTests.mxml</path>
<path kind="file" action="M">/private/flex/sdk/branches/apache/frameworks/build.xml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247582 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -233,13 +233,15 @@ tar -xjf "AIR Integration Kit.tbz2"
 
     <!-- osmf.swc (Version 1.0) -->
     <!-- Because this requires a network connection it downloads OSMF only if it doesn't already exist. -->
+	<!-- The swc at the top-level has lots of trace statements in it.  Use the one in the source zip. -->
     <target name="osmf-download" depends="osmf-check" unless="osmf.swc.present" description="Copies Text Layout Framework from Sourceforge">
         <mkdir dir="${FLEX_HOME}/in/downloads/OSMF_1.0"/>
         <get src="http://sourceforge.net/projects/osmf.adobe/files/OSMF%201.0%20%28final%20source%2C%20ASDocs%2C%20PDF%20guides%2C%20and%20release%20notes%29/OSMF_1.0.zip/download" 
             dest="${FLEX_HOME}/in/downloads/OSMF_1.0.zip" 
             verbose="false"/>
         <unzip dest="${FLEX_HOME}/in/downloads/OSMF_1.0" src="${FLEX_HOME}/in/downloads/OSMF_1.0.zip" />
-        <copy file="${FLEX_HOME}/in/downloads/OSMF_1.0/OSMF.swc" tofile="${basedir}/libs/osmf.swc"/>
+        <unzip dest="${FLEX_HOME}/in/downloads/OSMF_1.0/osmf_source_v1-0" src="${FLEX_HOME}/in/downloads/OSMF_1.0/osmf_source_v1-0.zip" />
+        <copy file="${FLEX_HOME}/in/downloads/OSMF_1.0/osmf_source_v1-0/OSMF.swc" tofile="${basedir}/libs/osmf.swc"/>
         <delete dir="${FLEX_HOME}/in/downloads/OSMF_1.0" failonerror="false"/>
     </target>
 
