Transferred from the Adobe Open Source Subversion Repository
Revision: 23275
Author:   cframpto@adobe.com
Date:     2012-01-09T18:28:32.249146Z

Log Message: 
-----------
Changes to allow framework to build in exploded mpl kit.  Delete frameworks directory.  Copy this frameworks directory in its place.  Either copy frameworks/build_frameworks.xml to frameworks/build.xml or build frameworks with ant -f build_frameworks.xml.

Modified Paths:
--------------
<path kind="dir" action="M">/private/flex/sdk/branches/apache/in</path>
<path kind="file" action="A">/private/flex/sdk/branches/apache/apache-excludes.txt</path>
<path kind="file" action="M">/private/flex/sdk/branches/apache/frameworks/build_framework.xml</path>
<path kind="file" action="M">/private/flex/sdk/branches/apache/frameworks/build.xml</path>
<path kind="dir" action="M">/private/flex/sdk/branches/apache/frameworks</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247586 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -224,7 +224,9 @@ tar -xjf "AIR Integration Kit.tbz2"
 	
     <target name="thirdparty-downloads" 
     	depends="airsdk-download,playerglobal-download, osmf-download, textLayout-download" 
-    	description="Copies third-party software into place for build" />
+    	description="Copies third-party software into place for build">
+        <echo message="Use the thirdparty-clean target to remove these."/> 
+    </target>
     
     <target name="airsdk-check" description="Checks if the Air SDK has been downloaded.">
         <available file="${FLEX_HOME}/in/air/mac/AIR Integration Kit.tbz2" property="airsdk.mac.present"/>
