--- a/frameworks/projects/advancedgrids/build.xml
+++ b/frameworks/projects/advancedgrids/build.xml
@@ -178,8 +178,8 @@
 			output="${FLEX_HOME}/frameworks/libs/advancedgrids.swc"
 			resource-bundle-list="${basedir}/bundles.properties">
 			<jvmarg line="${compc.jvm.args}"/>
-			<namespace uri="http://www.adobe.com/2006/mxml" manifest="${basedir}/manifest_advancedgrids.xml"/>
-			<include-namespaces>http://www.adobe.com/2006/mxml</include-namespaces>
+			<namespace uri="library://ns.adobe.com/flex/mx" manifest="${basedir}/manifest_advancedgrids.xml"/>
+			<include-namespaces>library://ns.adobe.com/flex/mx</include-namespaces>
 			<source-path path-element="${basedir}/src"/>
 			<library-path />
 			<external-library-path dir="${FLEX_HOME}/frameworks/libs">
@@ -216,8 +216,8 @@
 			<asdoc output="${FLEX_HOME}/tempDoc" lenient="true" failonerror="true" keep-xml="true" skip-xsl="true" fork="true">
 		    <compiler.source-path path-element="${basedir}/src"/>
 		  
-		    <doc-namespaces uri="http://www.adobe.com/2006/mxml"/>
-		    <namespace uri="http://www.adobe.com/2006/mxml" manifest="${basedir}/manifest_advancedgrids.xml"/>
+		    <doc-namespaces uri="library://ns.adobe.com/flex/mx"/>
+		    <namespace uri="library://ns.adobe.com/flex/mx" manifest="${basedir}/manifest_advancedgrids.xml"/>
 		    <jvmarg line="${asdoc.jvm.args}"/>
 		</asdoc>
  
